# panoptique

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conf.json  docker-compose.yml  manage.py  pi_surveillance.py  pyproject.toml  requirements.txt  server.py  setup.cfg  utils.py
.github/: build-push.yaml
.github/workflows/: python-app.yml
fastapitest/: main.py
panoptique/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: server.sh  uwsgi.ini
streaming/: apps.py  decorators.py  models.py  streaming.py  urls.py  views.py
streaming/management/commands/: detect.py
streaming/static/streaming/: custom.css  custom.js
streaming/templates/: base.html
streaming/templates/registration/: login.html
streaming/templates/streaming/: index.html
zeromq/: Dockerfile  client.py  server.py
