[tool.poetry]
name = "panoptique"
version = "0.1.0"
description = ""
authors = ["eduzen"]

[tool.poetry.dependencies]
python = "3.8"
django = "^3.1.2"
django-extensions = "^3.0.9"
ipython = "^7.18.1"
opencv-python = "^4.4.0"
numpy = "^1.19.2"
whitenoise = "^5.2.0"

[tool.black]
line-length = 119
safe = true
target-version = ['py38']

[tool.isort]
profile = "black"
include_trailing_comma = true
