[tool.poetry]
name = "panoptique"
version = "0.1.0"
description = ""
authors = ["eduzen"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.3"
django-extensions = "^3.0.9"
ipython = "^7.18.1"
opencv-python = "^4.4.0"
numpy = "^1.19.4"
whitenoise = "^5.2.0"
pyzmq = "^19.0.2"
gevent = "^20.9.0"
gunicorn = "^20.0.4"
pre-commit = "^2.11.0"
Pillow = "^8.0.1"

[tool.black]
line-length = 119
safe = true
target-version = ['py38']

[tool.isort]
profile = "black"
include_trailing_comma = true

[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
